--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
     "functions": {
-        "api/**/*.ts": {
-            "runtime": "now-deno@0.2.0"
+        "api/deno/**/*.ts": {
+            "runtime": "now-deno@0.3.0"
         }
     }
 }
