--- a/now.json
+++ b/now.json
@@ -1,6 +1,7 @@
 {
+    "version": 2,
     "functions": {
-        "api/**/*.ts": {
+        "api/**/*.{j,t}s": {
             "runtime": "now-deno@0.3.0"
         }
     },
